--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <!--Header introduction-->
     <table cellspacing="10px" >
         <tr>
-            <td><img src="Images/circle-cropped.png" alt="Alexis Garcia's picture" title="Alexis Garcia" width="250px"></td>
+            <td><img src="images/circle-cropped.png" alt="Alexis Garcia's picture" title="Alexis Garcia" width="250px"></td>
             <td><h1>Alexis García Sáez</h1>
             <p><i><b>Physical therapist</b></i></p>
             <p>Physical therapist who is now studying to become a full-stack web developer.</p></td>
@@ -74,6 +74,7 @@
             <td>Club de Padel Sabadell</td>
         </tr>
     </table>
+
     <!--Other stuff-->
         <h3>Others</h3>
         <ul>
@@ -82,7 +83,7 @@
             <li>Chiropractic license</li>
         </ul>
     <hr /><br />
-    <a href="Contact.html">Contact me</a>
+    <a href="contact.html">Contact me</a>
     
 </body>
 </html>
