--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Header introduction-->
     <table cellspacing="10px" >
         <tr>
-            <td><img src="images/circle-cropped.png" alt="Alexis Garcia's picture" title="Alexis Garcia" width="250px"></td>
+            <td><img src="Images/circle-cropped.png" alt="Alexis Garcia's picture" title="Alexis Garcia" width="250px"></td>
             <td><h1>Alexis García Sáez</h1>
             <p><i><b>Physical therapist</b></i></p>
             <p>Physical therapist who is now studying to become a full-stack web developer.</p></td>
