Added id's and for's

--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,12 @@
     <!--Send info-->
     <h3>Fill the following form in order to get in touch with me:</h3>
     <form action="mailto:lexisgasa@gmail.com" enctype="text/plain" method="post">
-        <label>Your name</label><br />
-        <input type="text" name="Name:"><br />
-        <label>Your e-mail</label><br />
-        <input type="email" name="Mail:"><br />
-        <label>Write your message</label><br />
-        <textarea name="Message:" cols="60" rows="8"></textarea><br />
+        <label for="name">Your name</label><br />
+        <input type="text" name="Name:" id="name"><br />
+        <label for="mail">Your e-mail</label><br />
+        <input type="email" name="Mail:" id="mail"><br />
+        <label for="message">Write your message</label><br />
+        <textarea name="Message:" cols="60" rows="8" id="message"></textarea><br />
         <button type="submit">Submit</button>
     </form>
     <p><a href="index.html">Go back to index</a></p>
